[UPD] fail fixed the section bottom its not responsive

--- a/css/style.css
+++ b/css/style.css
@@ -15,34 +15,44 @@
    background-color: rgb(55, 55, 55);
 }
 
-.music-player{
+.container{
+    width: 100%;
+    height: 100px;
+}
+
+.row{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    height: 112px;
+    flex-wrap: wrap;
+}
+
+.col-right{
+    width: 225px;
+    height: 100px;
+    
+    background-color:rgb(51, 50, 50);
+}
+
+.col-left{
+    width: 225px;
+    height: 100px;
+    background-color: rgb(51, 50, 50);
+    
+}
+
+.col-center{
+    width: calc(100% - 450px);
+    height: 100px;
+    background-color:rgb(51, 50, 50); 
 }
 
 .image-container{
-    width: 50px;
-    height: 50px;
-    
+    width: 60px;
+    height: 60px;
 }
 
 .image-container img{
     width: 100%;
     height: 100%;
-}
-
-.song-bar{
-    position: absolute;
-    padding: 16px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    
 }
 
 .song-info{
@@ -52,47 +62,44 @@
     
 }
 
-.song-description p{
-    margin-left: 10px;
-    color: #fff;
-}
-
-.title, .artist{
-    overflow: hidden;
+.icons{
+    display: flex;
+    gap: 10px;
     
 }
 
-.icons{
-   display: flex;
-   gap: 10px;
+.content-song{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px;
+  
+}
+
+
+.song-description p{
+    margin-left: 10px;
+    font-size: 15px;
 }
 
 .controller{
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    font-size: 15px;
     gap: 10px;
-    font-size: 20px;
 }
 
-.control-button{
+.control-buttom{
     display: flex;
     align-items: center;
     gap: 20px;
-}
-
-.control-button i:hover{
-    color: #fff;
-}
-
-.music-minute{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+    margin-top: 20px;
+    font-size: 20px;
 }
 
 .progress-bar{
@@ -109,13 +116,21 @@
     border-radius: 10px;
 }
 
-.progress-bar:hover .progress{
-    background-color: rgb(57, 242, 57);
+.progress:hover{
+    background-color: rgb(57,242, 57);
+}
+
+.music-minute{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
 }
 
 .progress-bar:hover .progress::after{
     content: "";
-    position:absolute;
+    position: absolute;
     border-radius: 50%;
     background-color: #fff;
     width: 15px;
@@ -124,62 +139,142 @@
     transform: translate(50%, calc(2.5px - 50%));
 }
 
+
 .other-functionality{
     position: absolute;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    right: 10px;
     gap: 10px;
-    right: 30px;
+    margin-top: 30px;
 }
 
 .volume-bar{
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 }
-
 
 .volume-bar .progress-bar{
     width: 95px;
 }
 
-i:hover{
-    color: #fff;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .sidebar{
-    width: 75px;
+    width: 230px;
     background-color: rgb(33, 32, 32);
 }
 
 .main-content{
-    width: calc(100vw - 75px);
+    width: calc(100vw - 230px);
     background-color: blue;
 }
 
 header{
     position: fixed;
     top: 0;
-    left: 75px;
+    left: 230px;
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.312);
-    width: calc(100vw - 75px);
+    width: calc(100vw - 230px);
     text-align: right;
 }
 
 /* media query */
-@media screen and (min-width: 768px) {
-    .sidebar{
+
+
+
+@media screen and (max-width: 668px) {
+    /* .sidebar{
         width: 200px;
-    }
+    } */
 
     .main-content{
-        width: calc(100vw - 200px);
+        width: calc(100vw - 230px);
     }
 
     header{
-        left: 200px;
-        width: calc(100vw - 200px);
+        left: 230px;
+        width: calc(100vw - 230px);
+    }
+
+    .col-left{
+        width: 35%;
+    }
+
+    .col-right{
+        width: 35%;
+    }
+
+    .col-center{
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 576px){
+    
+    .col-left{
+        width: 25%;
+    }
+
+    .col-right{
+        width: 25%;
+    }
+
+    .col-center{
+        width: 50%;
+    }
+
+    
+}
+
+@media screen and (max-width: 390px){
+     .sidebar{
+        width: 20%;
+    }
+
+    .col-left{
+        width: 30%;
+    }
+
+    .col-right{
+        width: 30%;
+    }
+
+    .col-center{
+        width: 40%;
+    }
+
+    .main-content{
+        width: calc(100vw - 20%);
+    }
+
+    header{
+        left: 20%;
+        width: calc(100vw - 20%);
     }
 }
